--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Wardial.org
+title: wardial.org
 email: admin@wardial.org
 description: > # this means to ignore newlines until "baseurl:"
   A living history of telephony exploration.
